# MidiParser

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
data/test_examples/: metamsgs.mid  midimsgs.mid
examples/: MidiParser_Example_NoteOffEvents.cpp  MidiParser_Example_NoteOnEvents.cpp
scripts/: run_benchmarks.sh
src/: CMakeLists.txt  File.cpp  File.h  HeaderChunk.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  TrackChunk.h  events.h  main.cpp
src/MidiParser/: Meta.hpp  MidiFile.h  MidiFile.hpp  MidiTrack.h  MidiTrack.hpp  Parser.cpp  Parser.h  Parser.hpp  Scanner.cpp  Scanner.h  enums.cpp  enums.h  enums.hpp  events.h  events.hpp  functionalParser.cpp  read.cpp  read.hpp  tables.cpp  tables.h
tests/: CMakeLists.txt  Parser.test.cpp  Scanner.test.cpp  events.test.cpp  read.test.cpp  regression.test.cpp  vlqto32.test.cpp
tools/: CMakeLists.txt  benchmark.cpp  writeMetaMsgs.cpp  writeMidiMsgs.cpp
